--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -26,3 +26,15 @@ body{
     font-weight: bold;
     padding: 20px;
 }
+
+input:invalid {
+    box-shadow: 0 0 5px 1px red;
+}
+
+input:focus:invalid {
+    outline: none;
+}
+
+input:valid {
+    box-shadow: 0 0 5px 1px green;
+}
